src/objects/Apttus_Config2__ProductConstraint__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the product constraint</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The constraint effective date. The constraint becomes effective on this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The constraint expiration date. The constraint becomes ineffective after this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The message to display to the user when the constraint is violated</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the constraint</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the constraint</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>